Doc relative to NeXus integration in User manual
git-svn-id: https://svn.mccode.org/svn/McStasTeX@182 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/virtual_output.tex
+++ b/trunk/virtual_output.tex
@@ -15,8 +15,7 @@ of ``text'' type, but can also assume the binary formats
 ``float'' or ``double''. The storing of neutron rays continue until the
 specified number of simulations have been performed.
 
-\verb+buffer-size+ may be used to limit the size of the output file, but 
-absolute intentities are then likely to be wrong. 
-We recommend to use the default value of zero, saving all neutron rays. 
-The size of the file is then controlled indirectly with 
-the general $ncounts$ parameter.
+\verb+buffer-size+ may be used to limit the size of the output file, but
+absolute intentities are then likely to be wrong.
+Exept when using MPI, we recommend to use the default value of zero, saving all neutron rays.
+The size of the file is then controlled indirectly with the general $ncounts$ parameter.
