--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -137,6 +137,7 @@ as C variable names. The list of these reserved keywords is shown in table~\ref{
       \texttt{INITIALIZE} & I,C & Embeds C code to be executed when starting. \\
       \texttt{ITERATE} & I & Defines iteration counter for JUMP. \\
       \texttt{MCDISPLAY} & C & Embeds C code to display a geometric  representation of a component. \\
+      \texttt{NEXUS} & I & Makes the NeXus output format available. \\
       \texttt{OUTPUT} & C & Defines internal variables to be public and protected symbols (usually all global variables and functions of DECLARE).\\
       \texttt{PARAMETERS} & C & Defines a class of component parameter. \\
       \texttt{POLARISATION} & C & Defines neutron polarisation coordinates. \\
@@ -212,7 +213,15 @@ given in section~\ref{s:vanadium_example.instr} and some additional
 examples of instrument definitions can be found on the McStas
 web-page~\cite{mcstas_webpage} and in the \texttt{example} directory.
 
-%An instrument definition looks as follows:
+As a summary, the usual grammar for instrument descriptions is
+\begin{verbatim}
+DEFINE name(parameters)
+DECLARE C_code
+INITIALIZE C_code {NEXUS}
+TRACE components
+{FINALLY C_code}
+END
+\end{verbatim}
 
 
 \subsection{The instrument definition head}
@@ -287,6 +296,25 @@ component definition or a part of an instrument. Variables defined here are glob
 This gives code that is executed when the simulation starts. This section is
 optional. Instrument setting parameters (e.g. doing tests or automatic settings) may be modified in this section.
 
+\subsection{The \texttt{NEXUS} extension}
+\index{Keyword!NEXUS} \index{Tools!NeXus} \index{Tools!HDF} \index{Data formats}
+\label{s:nexus}
+
+The NeXus format~\cite{nexus_webpage} requires to link the simulation to additional libraries (HDF and NeXus). The resulting executable is no longer portable. To activate the NeXus output, the keyword \verb+NEXUS+ must follow the INITIALIZE section, namely:
+
+\begin{quote}
+  \texttt{INITIALIZE} \\
+  \verb|%{| \\
+  \hbox to 3em{}\ldots C initializations. \ldots \\
+  \verb|%}|
+  \verb+NEXUS {filename} {HDF [4|5|XML]}+
+\end{quote}
+
+The optional {\it filename} is the name of the output data file. If not present, the filename is automatically built from the instrument name and a time stamp. The extension is added automatically, if not present. Additionally, it is possible to set the type of NeXus file with the \verb+HDF+ modifier, either 4, 5 or XML.
+
+Then, the output format is chosen as usual with the \verb+--format=NeXus+ option when launching the simulation. All output files are stored in the {\it filename}, as well as the instrument itself. Other formats are still available. When run on a distributed system (e.g. MPI), detectors are gathered, but list of events (see e.g. component Virtual\_output) are stored as one data set per node.
+
+If the \verb+NEXUS+ keyword is not part of the instrument, the default \MCS\ format will be used.\index{Bugs}
 
 \subsection{The \texttt{TRACE} section}
 \index{Keyword!TRACE}
@@ -446,7 +474,7 @@ here shown as an example of the use of \MCS .
 
 In this section, we describe some additional ways to build instruments using groups, code extension, conditions, loops and duplication of components.
 
-As a summary, the complete grammar definition for component instances within the instrument TRACE section is:
+As a summary, the nearly complete grammar definition for component instances within the instrument TRACE section is:
 
 \begin{verbatim}
 COMPONENT name = comp(parameters) {WHEN condition}
