--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -551,7 +551,7 @@ When choosing the HTML format, the simulation results are saved as a web page, w
   \end{center}
 \end{table}
 
-\begin{table} \index{Data formats}
+\begin{table} \index{Data formats|textbf}
   \begin{center}
     {\let\my=\\
     \begin{tabular}{|p{0.24\textwidth}|c|p{0.7\textwidth}|}
@@ -565,9 +565,10 @@ When choosing the HTML format, the simulation results are saved as a web page, w
       \texttt{Octave\_binary} & & Octave format with external binary files (may be used with -d option). (-a option implicitly set) \\
       \texttt{IDL} & .pro & IDL format. {\em Must} be used with -f option. \\
       \texttt{IDL\_binary} & & IDL format with external binary files (may be used with -d option). (-a option implicitly set) \\
-      \texttt{XML} & .xml & XML/NeXus format (may be used with -f and -d options). \\
+      \texttt{XML} & .xml & XML format, NeXus-like (may be used with -f and -d options). \\
       \texttt{HTML} & .html & HTML format (generates a web page, may be used with -f and -d options). Data files are saved as VRML objects (OpenGL). \\
       \texttt{VRML} & .wrl & Virtual Reality file format for data files. Simulation files are not saved properly, and the HTML format should be used preferably. \\
+      \texttt{NeXus} & .nx5 & NeXus data files (HDF). All simulation results are stored in a unique compressed binary file. This format requires to have NeXus installed, and to use NEXUS after the INITIALIZE keyword in the instrument decription.\\
       {\it Tripoli} &  & \hbox{Tripoli 4 neutron events file format.} \hbox{Use
         \verb+Virtual_tripoli4_input+/\verb+Virtual_tripoli4_output+} components. \index{Tripoli}\\
       {\it MCNP} &  & \hbox{MCNP PTRAC neutron events file format.} \hbox{Use
@@ -646,7 +647,8 @@ data before ending. Most errors appear when using a newly written component, in 
 There are various ways to speed up simulations
 \begin{itemize}
 \item Optimize the compilation of the instrument, as explained in section~\ref{s:compile}.
-\item Execute the simulation in parallel on a computer grid or a cluster (with MPI or multi-threading) as explained in section~\ref{s:run-mpi}.
+\item Execute the simulation in parallel on a computer grid or a cluster (with MPI
+) as explained in section~\ref{s:run-mpi}.
 \item Divide simulation into parts using a file for saving or generating neutron
       events. In this way, a guide may be simulated only once, saving the neutron events
       at the guide exit as a file, which is being read quickly by the second simulation
@@ -748,13 +750,11 @@ The list of available \MCS\ front-end programs may be obtained from the \verb+mc
        mcresplot     Instrument resolution function viewer
        mcstas2vitess McStas to Vitess component translation utility
        mcconvert     Matlab <-> Scilab script conversion tool
+       mcformat      Conversion tool for text files and MPI/grids
     When used with the -h flag, all tools display a specific help.
     SEE ALSO: mcstas, mcdoc, mcplot, mcrun, mcgui, mcresplot, mcstas2vitess
     DOC:      Please visit http://www.mcstas.org
 \end{verbatim}
-An extended set of front-end programs is planned for future versions of
-\MCS, including a NeXus data format option~\cite{nexus_webpage}.
-
 
 \subsection{The graphical user interface (mcgui)}
 \label{s:mcgui}
@@ -768,7 +768,7 @@ simply the command
 \end{verbatim}
 The mcgui (mcgui.pl on Windows) program may optionally be given the name of an instrument file.
 
-When the front-end is started, a main window is opened (se figure \ref{fig:mcgui}). This window
+When the front-end is started, a main window is opened (see figure \ref{fig:mcgui}). This window
 displays the output from compiling and running simulations, and also
 contains a few menus and buttons. The main purpose of the front-end is
 to edit and compile instrument definitions, run the simulations, and
@@ -1391,7 +1391,7 @@ meaningful except as a way to measure the performance of the
 simulation. Use the simulated intensity instead whenever analysing
 simulation data.
 
-\paragraph{\MCS\ and PGPLOT format}
+\subsection{\MCS\ and PGPLOT format}
 \index{Tools!PGPLOT} \index{Data formats}
 The \MCS\ original format, which is equivalent to the PGPLOT format, is simply columns of ASCII text that most programs should
 be able to read.
@@ -1439,7 +1439,7 @@ programs that do not know the special \MCS\ file format is
 simplified. The \verb+--file+ option may be used to store all data
 inside the \verb+mcstas.sim+ file instead of in separate files.
 
-\paragraph{Matlab, Scilab and IDL formats}
+\subsection{Matlab, Scilab and IDL formats}
 \index{Tools!Matlab} \index{Tools!Scilab} \index{Tools!IDL} \index{Data formats}
 
 With these formats \MCS\ automatically writes scripts containing the data as a structure, as well as in-line import and plot functions for the selected language. Usage examples are given in section~\ref{s:run-sim}.
@@ -1483,13 +1483,18 @@ ans =
 \end{verbatim}
 The latter example accesses the data from the 'monitor1.y\_kz' file written by the 'monitor1' component in the 'test' instrument during the './mcstas' simulation. You may evaluate directly the 'signal' and 'statistics' fields of the structure to obtain useful informations.
 
-\paragraph{HTML/VRML, XML/NeXus and NeXus formats}
+\subsection{HTML/VRML and XML formats}
+\index{Tools!HTML} \index{Tools!VRML} \index{Data formats}
 
-Both HTML and XML/NeXus formats are available. The former may be viewed using any web browser (Netscape, Internet Explorer, Nautilus) - showing data sets as VRML objects - while the latter may be browsed for instance using Internet Explorer (Windows and Mac OS) or GXMLViewer and KXMLEditor (under Linux).
+Both HTML and XML formats are available. The former may be viewed using any web browser (Netscape, Internet Explorer, Nautilus) - showing data sets as VRML objects - while the latter may be browsed for instance using Internet Explorer (Windows and Mac OS) or GXMLViewer and KXMLEditor (under Linux).
 
-The support for NeXus in \MCS\ is prelimminary as NeXus is not fully
-laid out. A future version of \MCS\ will fully support output in the
-final NeXus format~\cite{nexus_webpage}.
+The XML format is NeXus-like, but not fully compatible. However, \MCS\ may generate genuine NeXus/HDF format (see bellow).
+
+\subsection{NeXus format}
+\index{Tools!NeXus} \index{Tools!HDF} \index{Data formats}
+\label{r:nexus}
+
+The NeXus format~\cite{nexus_webpage} is a platform independent HDF binary data file. To have \MCS\ use it, the HDF and NeXus libraries must have been installed. To link the instrument with these libraries, the keyword \verb+NEXUS+ \emph{must} follow the \verb+INITIALIZE+ section in the instrument description (see Section \ref{s:nexus}). All results are saved in a single file, containing 'groups' of data. To view such files, install and use HDFView. This Java viewer can show content of all detectors, including metadata (attributes). Basic detector images may also be generated.
 
 \section{Using computer Grids and Clusters}
 \label{s:run-mpi}
@@ -1512,7 +1517,7 @@ Parallelizing a computation is in general possible when dependencies between
   excellent performances (but require the user to install MPI).
 \item when using SMP machines (multi processor machines) \MCS\ may
   distribute the simulations among CPU's using multi-threading
-  mechanism. Even though most systems now support multi-threading (i.e. do not require specific installation), the performances are not as good as with MPI.
+  mechanism. Even though most systems now support multi-threading (i.e. do not require specific installation), the performances are limited compared to MPI.
 \end{itemize}
 
 Last but not least, you may run simulations manually on a number of machines and merge them subsequently.
@@ -1714,6 +1719,6 @@ every node.
 
 \subsection{Parallel computing (multi-threading)}
 
-Multi-threading is under experimentation. It has been implemented when using \\\verb+mcrun -c --threads=NB_CPU ...+ and is also available from McGUI Run Dialog.
+Multi-threading is under experimentation. It has been implemented when using \\\verb+mcrun -c --threads=NB_CPU ...+.
 
-The method is based on a parallel execution of threads, which require mutexes in order to set rules for global (shared) memory accesses. This introduces quite large overhead and reduces efficiency. We thus do NOT recommand to use it. Further developments are under way.
+The method is based on a parallel execution of threads. This introduces quite large overhead and dramatically reduces efficiency. We thus do NOT recommand to use it. Further developments are under way.
