Bug/validation comments
git-svn-id: https://svn.mccode.org/svn/McStasTeX@185 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -5,7 +5,7 @@
 \index{Incoherent elastic scattering}
 \index{Multiple scattering}
 
-\component{Single\_crystal}{Kristian Nielsen}{$x_{width}, y_{height}, z_{thick}$,$\vec a, \vec b, \vec c, \Delta d/d$, mosaic, reflections}{$\sigma_{abs}, \sigma_{inc}$, ...}{partially validated, centered}
+\component{Single\_crystal}{Kristian Nielsen}{$x_{width}, y_{height}, z_{thick}$,$\vec a, \vec b, \vec c, \Delta d/d$, mosaic, reflections}{$\sigma_{abs}, \sigma_{inc}$, ...}{Partially validated, centered. Further validation undergoing. Known BUGS: The component is known not to work as a Bragg monochromator, likely the problem relates to the internal definition of the reciprocal space. Also, always use a non-zero value of the $\Delta d/d$ parameter.}
 
 The {\bf Single\_crystal} component models a thick, flat single crystal
 with multiple scattering and absorption with elastic coherent scattering.
