\verb not allowed in caption. Fixed.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@187 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -578,7 +578,7 @@ When choosing the HTML format, the simulation results are saved as a web page, w
       format.} \hbox{Use \verb+Virtual_input+/\verb+Virtual_output+ components.} \\
       \hline
     \end{tabular}
-    \caption{Available formats supported by \MCS\ simulations. Format modifiers include \verb+binary+, \verb+raw+, \verb+transpose+, \verb+append+.}
+    \caption{Available formats supported by \MCS\ simulations. Format modifiers include \emph{binary}, \emph{raw}, \emph{transpose}, \emph{append}.}
     \label{t:formatoptions}
     }
   \end{center}
